--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "next": "13.3.2",
     "react": "18.2.0",
+    "react-clamp-lines": "^3.0.3",
     "react-dom": "18.2.0",
     "sass": "^1.62.1",
     "swiper": "^9.3.2"
