--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^10.12.16",
     "next": "13.3.2",
+    "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-clamp-lines": "^3.0.3",
     "react-dom": "18.2.0",
