--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^10.12.16",
-    "next": "13.3.2",
+    "next": "^13.5.6",
     "prettier": "^3.0.3",
     "react": "18.2.0",
     "react-clamp-lines": "^3.0.3",
